# agent-trust-lab

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
agent_trust_lab/: __init__.py  baseline.py  cli.py  llm_reviewer.py  metrics.py  reviewer.py  schema.py  taxonomy.py  workflow.py
docs/: AGENT_REVIEW_COPILOT_ARCHITECTURE.md  AI_HOTSPOT_RADAR.md  ARCHITECTURE.md  CASE_WALKTHROUGH.md  CONTEXT_ENGINEERING.md  DEMO_SCREENSHOTS.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  EMNLP_DEMO_DRAFT.md  ERROR_TAXONOMY.md  EVALUATION_METRICS.md  GITHUB_PROXY_PUSH_TIP.md  GOVERNANCE.md  HUMAN_SPOT_CHECK_LOG.md  HUMAN_SPOT_CHECK_PROTOCOL.md  IMPACT_ROADMAP.md  INFLUENCE_PLAYBOOK.md  OUTREACH_KIT.md  OUTREACH_LOG.md  PAPER_STRATEGY.md  PORTFOLIO_SHOWCASE.md  POST_REUSABLE_TRUST_WORKFLOWS.md  POST_RISK_REVIEW_COPILOT.md  PROJECT_ONE_PAGER.md  PUBLIC_RELEASE_CHECKLIST.md  REALISTIC_CASES.md  RELEASE_NOTES_V0.1.md  RELEASE_NOTES_V0.4.md  REVIEW_PACKET.md  RISK_REVIEW_COPILOT.md  TECHNICAL_REPORT.md  WORKFLOW_RECIPES.md
examples/: baseline_comparison.json  baseline_comparison.md  batch_summary.json  copilot_input_agent_failure.json  copilot_input_agent_failure.txt  copilot_transcript_agent_failure.txt  evaluation_metrics.json  risk_review_packet.md  synthetic_aml_case.json  trust_report_sample.md  workflow_report_agent_tool_failure.json  workflow_report_agent_tool_failure.md
tests/: test_copilot.py  test_llm_reviewer.py  test_packaging.py  test_reviewer.py  test_session_extract.py
web/: app.js  index.html  styles.css
(+129 files in other folders)
